Save & Load feature

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <br>
     <button onclick="addToken()">Add Token</button>
 
+    <button id="saveWorldBtn">Save World</button>
+    <input type="file" id="loadWorldInput" style="display:none" accept=".json" />
+    <button id="loadWorldBtn">Load World</button>
+
     <h3>Initiative Order</h3>
     <ul id="initiative-order"></ul>
   </div>
