--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="map-grid"></div>
   </div>
   <div id="sidebar">
-    <img src="images/Logo with txt.png" alt="GeoBlade Icon" id="sidebar-icon" />
+    <a href="changelog.html"><img src="images/Logo with txt.png" alt="GeoBlade Icon" id="sidebar-icon" /></a>
     <br> <br> <br> <br>
     <label>Upload a Map</label>
     <input type="file" id="mapUpload" />
