--- a/changelog.html
+++ b/changelog.html
@@ -15,29 +15,29 @@
     <a href="index.html" class="back-btn">&larr; Back to Map</a>
     <ul class="changelog-list">
       <li>
-        <span class="changelog-date">2025-06-26</span>
-        <span class="changelog-title">Save/Load Improvements</span>
-        <p class="changelog-desc">Added ability to save and load tokens and map icons as well as token world positions. Initiative order is saved and loaded ready for your next session.</p>
+        <span class="changelog-date">26-06-2025</span>
+        <span class="changelog-title">v0.4 Initiative Tracker, UI Improvements and More</span>
+        <ul>
+          <li class="changelog-desc">Improved initiative order UI and added drag-and-drop reordering for tokens.</li>
+          <li class="changelog-desc">Added a dedicated changelog page with a new design and navigation. Now you can track updates and new features easily!</li>
+          <li class="changelog-desc">Small UI rework, and theme change. Adding better visuals to make the experience more pleasurable.</li>
+          <li class="changelog-desc">Fixed various bugs related to token movement and map loading.</li>
+          <li class="changelog-desc">Added social icons, to direct to Discord, TikTok & YouTube. At the moment, TikTok & YouTube send you to Krimson Knights as GeoBlade doesn't own official socials for these yet.</li>
+          <li class="changelog-desc">Added token preview from the initiative order, so you don't have to remember which name is for which token.</li>
+          <li class="changelog-desc">Added a button to view the changelog, so you can always see what has changed in the latest version.</li>
+        </ul>
       </li>
       <li>
-        <span class="changelog-date">2025-06-25</span>
-        <span class="changelog-title">Dedicated Changelog</span>
-        <p class="changelog-desc">Added a dedicated changelog page with a new design and navigation. Now you can track updates and new features easily!</p>
-      </li>
-      <li>
-        <span class="changelog-date">2025-06-20</span>
-        <span class="changelog-title">Initiative Tracker Improvements</span>
-        <p class="changelog-desc">Improved initiative order UI and added drag-and-drop reordering for tokens.</p>
-      </li>
-      <li>
-        <span class="changelog-date">2025-06-10</span>
-        <span class="changelog-title">Map Save/Load</span>
-        <p class="changelog-desc">You can now save your world as a JSON file and load it back later.</p>
-      </li>
-      <li>
-        <span class="changelog-date">2025-05-30</span>
-        <span class="changelog-title">Token System</span>
-        <p class="changelog-desc">Added support for adding, moving, and removing tokens on the map grid.</p>
+        <span class="changelog-date">25-06-2025</span>
+        <span class="changelog-title">v0.3 GeoBlade Launched</span>
+        <ul>
+          <li class="changelog-desc">Initial release of GeoBlade, a web-based map tool for tabletop RPGs.</li>
+          <li class="changelog-desc">Added support for adding, moving, and removing tokens on the map grid.</li>
+          <li class="changelog-desc">Implemented a basic map grid system to display the game map.</li>
+          <li class="changelog-desc">Introduced a sidebar for uploading maps and tokens, setting token properties, and managing the game state.</li>
+          <li class="changelog-desc">Implemented a basic initiative tracker to manage turn order during gameplay.</li>
+          <li class="changelog-desc">You can now save your world as a JSON file and load it back later.</li>
+        </ul>
       </li>
       <!-- Add more changelog entries here -->
     </ul>
